[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/Poppins-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/Objects/Note/note.png" type="Texture" id=2]
[ext_resource path="res://src/Objects/Note/Note.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="DynamicFont" id=2]
size = 48
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="Note" type="Sprite"]
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Interaction_hitbox" type="Area2D" parent="." groups=["interactable"]]
visible = false
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction_hitbox"]
shape = SubResource( 1 )

[node name="Interaction_timer" type="Timer" parent="."]
one_shot = true

[node name="Interaction_panel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -148.0
margin_top = -200.0
margin_right = 89.0
margin_bottom = -52.0

[node name="VBoxContainer" type="VBoxContainer" parent="Interaction_panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 230.0
margin_bottom = 141.0

[node name="Title" type="Label" parent="Interaction_panel/VBoxContainer"]
margin_right = 223.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 2 )
text = "Note"
align = 1

[node name="Action1" type="Label" parent="Interaction_panel/VBoxContainer"]
margin_top = 72.0
margin_right = 223.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 3 )
text = "Hold [F] to Search"
align = 1

[node name="Interaction_progress" type="ProgressBar" parent="Interaction_panel/VBoxContainer"]
margin_top = 111.0
margin_right = 223.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 4 )
step = 1.0
rounded = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1.90735e-06, 9.53674e-07 )
scale = Vector2( 4, 4 )

[connection signal="timeout" from="Interaction_timer" to="." method="_on_Interaction_timer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
